--- a/app/modules/home/views/home.controller.html
+++ b/app/modules/home/views/home.controller.html
@@ -1,3 +1,31 @@
-<div ng-init="init();">
-    <p>Create structure</p>
+<div class="row" ng-init="init();">
+    <fieldset>
+        <legend>List of contracts</legend>
+        <table class="table table-condensed table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th ng-repeat="(key, value) in listOfContracts[0]" ng-click="changeSorting(key)">{{key}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="item in listOfContracts | orderObjectBy:sort.column">
+                    <td>{{item["Código"]}}</td>
+                    <td>{{item["Data acordo comercial"]}}</td>
+                    <td>{{item["Natureza"]}}</td>
+                    <td>{{item["Comprador"]}}</td>
+                    <td>{{item["Vendedor"]}}</td>
+                    <td>{{item["Energia referência"]}}</td>
+                    <td>{{item["Energia entregue"]}}</td>
+                    <td>{{item["Status aprovação"]}}</td>
+                    <td>{{item["Modelo"]}}</td>
+                    <td>{{item["Preço base contratado"]}}</td>
+                    <td>{{item["Submercado"]}}</td>
+                    <td>{{item["Início fornecimento"]}}</td>
+                    <td>{{item["Fim fornecimento"]}}</td>
+                    <td>{{item["Início vigência"]}}</td>
+                    <td>{{item["Fim vigência"]}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </fieldset>
 </div>
