--- a/app/modules/home/views/home.controller.html
+++ b/app/modules/home/views/home.controller.html
@@ -3,36 +3,39 @@
         <legend>List of contracts</legend>
         <div class="form-group">
             <label>Pesquisar</label>
-            <input type="text" class="form-control" ng-model="q">
+            <input type="text" class="form-control" placeholder="Pesquisar..." ng-model="q">
+        </div>
+        <div class="form-group">
+            <button class="btn" type="button" ng-click="viewHideColumn()">Visualizar/Esconder colunas</button>
         </div>
         <table class="table table-condensed table-bordered table-hover">
             <thead>
                 <tr>
-                    <th ng-repeat="(key, value) in listOfContracts[0]" ng-click="changeSorting(key)">{{key}} <i class="fa" ng-class="{'fa-sort-asc':sort.descending,'fa-sort-desc':!sort.descending}"></i></th>
+                    <th ng-repeat="(key, value) in listOfContracts[0]" ng-if="listOfColumns[$index].visible" ng-click="changeSorting(key)">{{key}} <i class="fa" ng-class="{'fa-sort-asc':sort.descending,'fa-sort-desc':!sort.descending}"></i></th>
                     <th>Opções</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="item in listOfContracts | orderObjectBy:sort.column:sort.descending | filter:q">
-                    <td>{{item["Código"]}}</td>
-                    <td>{{item["Data acordo comercial"]}}</td>
-                    <td>{{item["Natureza"]}}</td>
-                    <td>{{item["Comprador"]}}</td>
-                    <td>{{item["Vendedor"]}}</td>
-                    <td>{{item["Energia referência"]}}</td>
-                    <td>{{item["Energia entregue"]}}</td>
-                    <td>{{item["Status aprovação"]}}</td>
-                    <td>{{item["Modelo"]}}</td>
-                    <td>{{item["Preço base contratado"]}}</td>
-                    <td>{{item["Submercado"]}}</td>
-                    <td>{{item["Início fornecimento"]}}</td>
-                    <td>{{item["Fim fornecimento"]}}</td>
-                    <td>{{item["Início vigência"]}}</td>
-                    <td>{{item["Fim vigência"]}}</td>
+                    <td ng-if="listOfColumns[0].visible">{{item["Código"]}}</td>
+                    <td ng-if="listOfColumns[1].visible">{{item["Data acordo comercial"]}}</td>
+                    <td ng-if="listOfColumns[2].visible">{{item["Natureza"]}}</td>
+                    <td ng-if="listOfColumns[3].visible">{{item["Comprador"]}}</td>
+                    <td ng-if="listOfColumns[4].visible">{{item["Vendedor"]}}</td>
+                    <td ng-if="listOfColumns[5].visible">{{item["Energia referência"]}}</td>
+                    <td ng-if="listOfColumns[6].visible">{{item["Energia entregue"]}}</td>
+                    <td ng-if="listOfColumns[7].visible">{{item["Status aprovação"]}}</td>
+                    <td ng-if="listOfColumns[8].visible">{{item["Modelo"]}}</td>
+                    <td ng-if="listOfColumns[9].visible">{{item["Preço base contratado"]}}</td>
+                    <td ng-if="listOfColumns[10].visible">{{item["Submercado"]}}</td>
+                    <td ng-if="listOfColumns[11].visible">{{item["Início fornecimento"]}}</td>
+                    <td ng-if="listOfColumns[12].visible">{{item["Fim fornecimento"]}}</td>
+                    <td ng-if="listOfColumns[13].visible">{{item["Início vigência"]}}</td>
+                    <td ng-if="listOfColumns[14].visible">{{item["Fim vigência"]}}</td>
                     <td>
                         <div class="btn-group" role="group">
                             <button type="button" class="btn btn-default" ng-click="editContract(item);"><i class="fa fa-edit"></i></button>
-                            <button type="button" class="btn btn-default" ng-click="ViewContract(item);"><i class="fa fa-eye"></i></button>
+                            <button type="button" class="btn btn-default" ng-click="viewContract(item);"><i class="fa fa-eye"></i></button>
                         </div>
                     </td>
                 </tr>
