--- a/app/modules/home/views/viewdetail.controller.html
+++ b/app/modules/home/views/viewdetail.controller.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title" id="modal-title">Editar contrato - {{vm.item["Código"]}}</h3>
+    <h3 class="modal-title" id="modal-title">Detalhe do contrato {{vm.item["Código"]}}</h3>
 </div>
 <div class="modal-body" id="modal-body">
     <form>
@@ -7,19 +7,19 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="codigo">Código</label>
-                    <input type="text" class="form-control" name="codigo" id="codigo" placeholder="Código do contrato" ng-model="vm.item['Código']">
+                    <input type="text" readonly disabled class="form-control" name="codigo" id="codigo" placeholder="Código do contrato" ng-model="vm.item['Código']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="data_acordo">Data acordo comercial</label>
-                    <input type="text" class="form-control" name="data_acordo" id="data_acordo" placeholder="Data acordo comercial" ng-model="vm.item['Data acordo comercial']">
+                    <input type="text" readonly disabled class="form-control" name="data_acordo" id="data_acordo" placeholder="Data acordo comercial" ng-model="vm.item['Data acordo comercial']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="natureza">Natureza</label>
-                    <input type="text" class="form-control" name="natureza" id="natureza" placeholder="Natureza" ng-model="vm.item['Natureza']">
+                    <input type="text" readonly disabled class="form-control" name="natureza" id="natureza" placeholder="Natureza" ng-model="vm.item['Natureza']">
                 </div>
             </div>
         </div>
@@ -28,19 +28,19 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="comprador">Comprador</label>
-                    <input type="text" class="form-control" name="comprador" id="comprador" placeholder="Comprador" ng-model="vm.item['Comprador']">
+                    <input type="text" readonly disabled class="form-control" name="comprador" id="comprador" placeholder="Comprador" ng-model="vm.item['Comprador']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="vendedor">Vendedor</label>
-                    <input type="text" class="form-control" name="vendedor" id="vendedor" placeholder="Vendedor" ng-model="vm.item['Vendedor']">
+                    <input type="text" readonly disabled class="form-control" name="vendedor" id="vendedor" placeholder="Vendedor" ng-model="vm.item['Vendedor']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="energia_referencia">Energia referência</label>
-                    <input type="text" class="form-control" name="energia_referencia" id="energia_referencia" placeholder="Energia referência" ng-model="vm.item['Energia referência']">
+                    <input type="text" readonly disabled class="form-control" name="energia_referencia" id="energia_referencia" placeholder="Energia referência" ng-model="vm.item['Energia referência']">
                 </div>
             </div>
         </div>
@@ -49,19 +49,19 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="energia_entregue">Energia entregue</label>
-                    <input type="text" class="form-control" name="energia_entregue" id="energia_entregue" placeholder="Energia entregue" ng-model="vm.item['Energia entregue']">
+                    <input type="text" readonly disabled class="form-control" name="energia_entregue" id="energia_entregue" placeholder="Energia entregue" ng-model="vm.item['Energia entregue']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="status_aprovacao">Status aprovação</label>
-                    <input type="text" class="form-control" name="status_aprovacao" id="status_aprovacao" placeholder="Status aprovação" ng-model="vm.item['Status aprovação']">
+                    <input type="text" readonly disabled class="form-control" name="status_aprovacao" id="status_aprovacao" placeholder="Status aprovação" ng-model="vm.item['Status aprovação']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="modelo">Modelo</label>
-                    <input type="text" class="form-control" name="modelo" id="modelo" placeholder="Modelo" ng-model="vm.item['Modelo']">
+                    <input type="text" readonly disabled class="form-control" name="modelo" id="modelo" placeholder="Modelo" ng-model="vm.item['Modelo']">
                 </div>
             </div>
         </div>
@@ -70,19 +70,19 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="preco_base_contratado">Preço base contratado</label>
-                    <input type="text" class="form-control" name="preco_base_contratado" id="preco_base_contratado" placeholder="Preço base contratado" ng-model="vm.item['Preço base contratado']">
+                    <input type="text" readonly disabled class="form-control" name="preco_base_contratado" id="preco_base_contratado" placeholder="Preço base contratado" ng-model="vm.item['Preço base contratado']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="submercado">Submercado</label>
-                    <input type="text" class="form-control" name="submercado" id="submercado" placeholder="Submercado" ng-model="vm.item['Submercado']">
+                    <input type="text" readonly disabled class="form-control" name="submercado" id="submercado" placeholder="Submercado" ng-model="vm.item['Submercado']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="inicio_fornecimento">Início fornecimento</label>
-                    <input type="text" class="form-control" name="inicio_fornecimento" id="inicio_fornecimento" placeholder="Início fornecimento" ng-model="vm.item['Início fornecimento']">
+                    <input type="text" readonly disabled class="form-control" name="inicio_fornecimento" id="inicio_fornecimento" placeholder="Início fornecimento" ng-model="vm.item['Início fornecimento']">
                 </div>
             </div>
         </div>
@@ -91,19 +91,19 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="fim_fornecimento">Fim fornecimento</label>
-                    <input type="text" class="form-control" name="fim_fornecimento" id="fim_fornecimento" placeholder="Fim fornecimento" ng-model="vm.item['Fim fornecimento']">
+                    <input type="text" readonly disabled class="form-control" name="fim_fornecimento" id="fim_fornecimento" placeholder="Fim fornecimento" ng-model="vm.item['Fim fornecimento']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="inicio_vigencia">Início vigência</label>
-                    <input type="text" class="form-control" name="inicio_vigencia" id="inicio_vigencia" placeholder="Início vigência" ng-model="vm.item['Início vigência']">
+                    <input type="text" readonly disabled class="form-control" name="inicio_vigencia" id="inicio_vigencia" placeholder="Início vigência" ng-model="vm.item['Início vigência']">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="fim_vigencia">Fim vigência</label>
-                    <input type="text" class="form-control" name="fim_vigencia" id="fim_vigencia" placeholder="Fim vigência" ng-model="vm.item['Fim vigência']">
+                    <input type="text" readonly disabled class="form-control" name="fim_vigencia" id="fim_vigencia" placeholder="Fim vigência" ng-model="vm.item['Fim vigência']">
                 </div>
             </div>
         </div>
@@ -111,6 +111,5 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="vm.ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+    <button class="btn btn-primary" type="button" ng-click="vm.ok()">Fechar</button>
 </div>
