--- a/app/modules/home/views/viewhide.controller.html
+++ b/app/modules/home/views/viewhide.controller.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title" id="modal-title">Detalhe do contrato {{vm.item["Código"]}}</h3>
+    <h3 class="modal-title" id="modal-title">Visualizar / Esconder colunas</h3>
 </div>
 <div class="modal-body" id="modal-body">
     <ul class="list-group">
